fix checkbox bootstrap

--- a/user-modals.css
+++ b/user-modals.css
@@ -132,3 +132,9 @@
   padding-bottom: 5px;
 }
 /* IGNORE THIS -- @media at 290px*/
+
+.checkbox input[type=checkbox], .checkbox-inline input[type=checkbox], .radio input[type=radio], .radio-inline input[type=radio] {
+  position: absolute;
+  margin-top: 3px;
+  margin-left: -20px;
+}
